tests/ui_board/snapshots/ui_board__snapshots__empty_and_narrow_board.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 50
expression: "snapshot(&mut fixture, 24, 6, ThemePreference::Dark)"
---
SIZE 24x6

TEXT
00│⋮│
01││
02││
03│  proqi-ui-contract│
04│  0 · compose · saved│
05│  Esc Board│

STYLE RUNS
0: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-23 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
1: 0-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-21 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 22-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 5-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
