tests/ui_board/snapshots/ui_board__snapshots__expanded_debug_session_identity_preserves_footer_band_order.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 251
expression: "snapshot(&mut fixture, 80, 11, ThemePreference::Dark)"
---
SIZE 80x11

TEXT
00││
01│  first thought│
02│  ──────────────────────────────────────────────────────────────────────────────│
03││
04│⋮ second thought│
05││
06││
07││
08│  Mouse selection QA · ses_068q40p201o010000000000000│
09│  2 thoughts · edit · saved│
10│  Esc Board  y Copy  x Cut  u Undo  : Commands  ? Shortcuts│

STYLE RUNS
0: 0-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-79 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
3: 0-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-79 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
5: 0-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-19 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 20-52 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 53-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-77 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 78-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 5-12 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 13-13 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 14-20 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 21-21 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 22-27 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 28-28 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 29-35 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 36-36 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 37-47 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 48-48 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 49-79 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
