tests/ui_board/snapshots/ui_board__snapshots__expanded_long_thought_uses_the_viewport_without_a_second_expand_control.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 320
expression: "snapshot(&mut fixture, 44, 12, ThemePreference::Dark)"
---
SIZE 44x12

TEXT
00││
01│  line 0 wraps with Grüße 界  and ordinary│
02│  words│
03│  line 1 wraps with Grüße 界  and ordinary│
04│⋮ words│
05│  line 2 wraps with Grüße 界  and ordinary│
06│  words│
07│  line 3 wraps with Grüße 界  and ordinary│
08││
09│  proqi-ui-contract│
10│  1 thought · board · saving│
11│  n New   : Commands  ? Shortcuts│

STYLE RUNS
0: 0-43 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-26 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 27-27 fg=Reset bg=Reset mod=NONE | 28-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
3: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-26 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 27-27 fg=Reset bg=Reset mod=NONE | 28-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
4: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
5: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-26 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 27-27 fg=Reset bg=Reset mod=NONE | 28-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
6: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
7: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-26 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 27-27 fg=Reset bg=Reset mod=NONE | 28-43 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
8: 0-43 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-43 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-41 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 42-43 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 23-43 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
