tests/ui_board/snapshots/ui_board__snapshots__failed_save_replaces_the_summary_without_changing_footer_height.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 166
expression: "snapshot(&mut fixture, 55, 9, ThemePreference::Dark)"
---
SIZE 55x9

TEXT
00│⋮ important prompt│
01││
02││
03││
04││
05│  save failed · r Retry · w Export recovery│
06│  proqi-ui-contract│
07│  1 thought · edit · unsaved│
08│  r Retry  w Export    Shortcuts│

STYLE RUNS
0: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-54 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
1: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-52 fg=LightRed bg=Rgb(15, 13, 10) mod=NONE | 53-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-52 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 53-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-10 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 11-11 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 12-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
