tests/ui_board/snapshots/ui_board__snapshots__failed_save_uses_a_dedicated_status_row.snap
---
source: tests/ui_board/snapshots.rs
expression: "snapshot(&mut fixture, 55, 9, ThemePreference::Dark)"
---
SIZE 55x9

TEXT
00│  proqi · proqi-ui-contract · 1 thought│
01│⋮ important prompt│
02││
03││
04││
05││
06│  save failed · r Retry · w Export recovery│
07│                                       edit · unsaved│
08│  r Retry  w Export   ? Shortcuts│

STYLE RUNS
0: 0-54 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(91, 158, 125) mod=BOLD | 1-17 fg=Rgb(232, 228, 223) bg=Rgb(52, 52, 63) mod=NONE | 18-18 fg=Rgb(232, 228, 223) bg=Rgb(91, 158, 125) mod=NONE | 19-54 fg=Rgb(232, 228, 223) bg=Rgb(52, 52, 63) mod=NONE
2: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-52 fg=LightRed bg=Rgb(15, 13, 10) mod=NONE | 53-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-52 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 53-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 3-10 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 11-11 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 12-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(91, 158, 125) bg=Rgb(15, 13, 10) mod=NONE | 23-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
