tests/ui_board/snapshots/ui_board__snapshots__fast_navigation_fallbacks_are_visible_in_the_command_palette.snap
---
source: tests/ui_board/snapshots.rs
assertion_line: 452
expression: "snapshot(&mut fixture, 72, 12, ThemePreference::Dark)"
---
SIZE 72x12

TEXT
00│┌ commands ──────────────────────────────────────────────────────────[x]│
01││:cursor                                                               ││
02││Jump cursor up 5 visual rows                                      edit││
03││Jump cursor down 5 visual rows                                    edit││
04││Move cursor to thought beginning                                  edit││
05││Move cursor to thought end                                        edit││
06││Split thought at cursor                                       t · edit││
07│└──────────────────────────────────────────────────────────────────────┘│
08││
09│  proqi-ui-contract│
10│  1 thought · board · saving│
11│  n New   y Copy  x Cut  d/Del  Space Select / Search  : Commands│

STYLE RUNS
0: 0-68 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 69-71 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-7 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 8-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-0 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 1-28 fg=Rgb(112, 214, 155) bg=Rgb(39, 40, 48) mod=BOLD | 29-66 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE | 67-70 fg=Rgb(176, 169, 160) bg=Rgb(39, 40, 48) mod=NONE | 71-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-66 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 67-70 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 71-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-66 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 67-70 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 71-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-66 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 67-70 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 71-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-62 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 63-70 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 71-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-69 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 70-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 18-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 19-24 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 25-29 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 30-31 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 32-36 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 37-44 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 45-45 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 46-54 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 55-55 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 56-71 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
